updated refresh button

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "marked": "^11.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "typed.js": "^2.1.0"
